Fix wrapping timeline

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -56,7 +56,9 @@
     float: right;
     font-size: 24px;
     line-height: 1;
-    margin-top: -30px;
+    position: absolute;
+    right: 0;
+    top: -30px;
   }
 
   .tick {
@@ -64,5 +66,5 @@
   }
 
   /* Map */
-  
+
 }
